[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reV/"]

[project]
name = "NREL-reV"
dynamic = ["version"]
description = "National Renewable Energy Laboratory's (NREL's) Renewable Energy Potential(V) Model: reV"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Galen Maclaurin", email = "galen.maclaurin@nrel.gov" },
]
keywords = [
    "reV",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "nrel-gaps>=0.6.11",
    "nrel-nrwal>=0.0.7",
    "nrel-pysam==4.1.0",
    "nrel-rex>=0.2.97",
    "numpy>=1.24.4",
    "packaging>=20.3",
    "plotly>=4.7.1",
    "plotting>=0.0.6",
    "shapely",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pylint",
    "pytest>=5.2",
]
hsds = [
    "hsds>=0.8.4",
]
s3 = [
    "fsspec",
    "s3fs",
]
test = [
    "pytest>=5.2",
]

[project.scripts]
reV = "reV.cli:main"
reV-QA-QC = "reV.qa_qc.cli_qa_qc:main"
reV-bespoke = "reV.bespoke.cli_bespoke:main"
reV-collect = "reV.handlers.cli_collect:main"
reV-econ = "reV.econ.cli_econ:main"
reV-gen = "reV.generation.cli_gen:main"
reV-hybrids = "reV.hybrids.cli_hybrids:main"
reV-multiyear = "reV.handlers.cli_multi_year:main"
reV-nrwal = "reV.nrwal.cli_nrwal:main"
reV-project-points = "reV.config.cli_project_points:project_points"
reV-rep-profiles = "reV.rep_profiles.cli_rep_profiles:main"
reV-supply-curve = "reV.supply_curve.cli_supply_curve:main"
reV-supply-curve-aggregation = "reV.supply_curve.cli_sc_aggregation:main"

[project.urls]
Homepage = "https://nrel.github.io/reV/"

[tool.hatch.version]
path = "reV/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/rev",
]
